[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Exercises.gd" type="Script" id=1]
[ext_resource path="res://assets/golpes_kendo.JPG" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.737255, 0.45098, 0.45098, 1 )
position = Vector2( 560.5, 337.846 )
scale = Vector2( 0.840314, 0.840314 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.596078, 0.956863, 0.521569, 1 )
position = Vector2( 560.5, 337.846 )
scale = Vector2( 0.840314, 0.840314 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.513726, 0.596078, 0.980392, 1 )
position = Vector2( 560.5, 337.846 )
scale = Vector2( 0.840314, 0.840314 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.701961, 0.513726, 0.788235, 1 )
position = Vector2( 560.5, 337.846 )
scale = Vector2( 0.840314, 0.840314 )
texture = ExtResource( 2 )
